Revise Privacy Policy for clarity and updates
Updated the Privacy Policy to reflect changes in language, structure, and content. Added sections on user rights, data security, and contact information.

--- a/index.html
+++ b/index.html
@@ -1,82 +1,210 @@
 <!DOCTYPE html>
-<html lang="es">
+
+<html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>Política de Privacidad - Obsesive</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Privacy Policy – Obsesive</title>
   <style>
     body {
-      font-family: Arial, sans-serif;
-      max-width: 900px;
-      margin: 40px auto;
-      padding: 0 20px;
+      font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif;
       line-height: 1.6;
-      color: #222;
+      color: #1f2937;
+      background-color: #ffffff;
+      margin: 0;
+      padding: 0;
     }
-    h1, h2 {
-      color: #111;
+    .container {
+      max-width: 900px;
+      margin: 0 auto;
+      padding: 32px 20px 64px;
     }
     h1 {
-      border-bottom: 2px solid #ddd;
-      padding-bottom: 10px;
+      font-size: 2.2rem;
+      margin-bottom: 0.5rem;
+    }
+    h2 {
+      font-size: 1.4rem;
+      margin-top: 2.5rem;
+      border-bottom: 1px solid #e5e7eb;
+      padding-bottom: 6px;
+    }
+    p, li {
+      font-size: 1rem;
+    }
+    ul {
+      padding-left: 20px;
+    }
+    .meta {
+      color: #6b7280;
+      margin-bottom: 2rem;
+    }
+    footer {
+      margin-top: 4rem;
+      font-size: 0.9rem;
+      color: #6b7280;
     }
   </style>
 </head>
 <body>
+  <div class="container">
+    <h1>Privacy Policy – Obsesive</h1>
+    <p class="meta">Last updated: December 2025</p>
 
-<h1>Política de Privacidad – Obsesive</h1>
-
-<p><strong>Última actualización:</strong> 16 de diciembre de 2025</p>
-
-<p><strong>Obsesive</strong> es una aplicación de entrenamiento y fitness basada en la ciencia, diseñada para ayudar a los usuarios a crear rutinas, registrar su progreso y acceder a contenido educativo respaldado por fuentes científicas.</p>
-
-<h2>Información que recopilamos</h2>
-
-<h3>Información de cuenta</h3>
-<p>Cuando el usuario crea una cuenta mediante correo electrónico o inicio de sesión con Google, se recopilan datos básicos como correo electrónico e identificadores de usuario.</p>
-
-<h3>Información de uso</h3>
-<ul>
-  <li>Rutinas de entrenamiento creadas</li>
-  <li>Ejercicios, series y configuraciones</li>
-  <li>Preferencias dentro de la aplicación</li>
-</ul>
-
-<h3>Información técnica</h3>
-<p>Tipo de dispositivo, versión del sistema operativo y datos relacionados con errores o rendimiento.</p>
-
-<h2>Uso de la información</h2>
-<p>La información recopilada se utiliza para permitir el funcionamiento de la aplicación, guardar el progreso del usuario, mejorar la experiencia y mostrar anuncios.</p>
-
-<h2>Compartición de información</h2>
-<p>Actualmente, algunas rutinas pueden compartirse de forma global dentro de la aplicación. No se comparte información personal sensible junto a estas rutinas.</p>
-
-<h2>Servicios de terceros</h2>
-<ul>
-  <li>Firebase (autenticación, base de datos y análisis)</li>
-  <li>Google AdMob (publicidad)</li>
-  <li>Google Play Services</li>
-</ul>
-
-<h2>Enlaces externos</h2>
-<p>La aplicación puede incluir enlaces a artículos científicos externos. Obsesive no es responsable por el contenido ni las políticas de privacidad de dichos sitios.</p>
-
-<h2>Seguridad</h2>
-<p>Se aplican medidas razonables para proteger la información del usuario.</p>
-
-<h2>Privacidad de menores</h2>
-<p>La aplicación no está dirigida a menores de 13 años.</p>
-
-<h2>Eliminación de datos</h2>
-<p>El usuario puede solicitar la eliminación de su cuenta y datos asociados contactando al desarrollador.</p>
-
-<h2>Cambios en esta política</h2>
-<p>Esta política puede actualizarse ocasionalmente. Los cambios serán publicados en esta página.</p>
-
-<h2>Contacto</h2>
+```
+<h2>1. General Information</h2>
 <p>
-Correo de contacto: <strong>obsesive.app@gmail.com</strong>
+  <strong>App name:</strong> Obsesive<br />
+  <strong>Developer:</strong> Obsesive Labs<br />
+  <strong>Platform:</strong> Android (Google Play)
+</p>
+<p>
+  Obsesive is a gym and workout planning application based on scientific evidence. The app can be used <strong>with or without creating an account</strong>. Creating an account is completely optional.
 </p>
 
+<h2>2. Using the App Without an Account</h2>
+<p>
+  Users can access <strong>all core features of the app without signing in</strong>, including:
+</p>
+<ul>
+  <li>Creating and saving workout routines</li>
+  <li>Recording workout history</li>
+  <li>Analyzing training volume and routines</li>
+  <li>Viewing statistics per muscle group</li>
+  <li>Using the workout timer</li>
+  <li>Browsing exercises and scientific articles</li>
+</ul>
+<p>
+  When the app is used without an account, all data is stored <strong>locally on the device only</strong>. If the user changes or loses their device, this information will be permanently lost and cannot be recovered.
+</p>
+
+<h2>3. Information We Collect</h2>
+
+<h3>3.1 Information that may be collected</h3>
+
+<p><strong>a) Personal information (optional)</strong></p>
+<ul>
+  <li>Email address (only if the user creates an account)</li>
+</ul>
+
+<p><strong>b) User-generated content</strong></p>
+<ul>
+  <li>Workout routines</li>
+  <li>Workout and exercise history</li>
+  <li>Training statistics and analysis per muscle group</li>
+  <li>App-related configurations</li>
+</ul>
+
+<p><strong>c) App usage and performance data</strong></p>
+<ul>
+  <li>App interactions</li>
+  <li>Crash logs</li>
+  <li>Diagnostics and performance data</li>
+</ul>
+
+<p><strong>d) Technical identifiers</strong></p>
+<ul>
+  <li>Device identifiers or other technical identifiers provided by third-party services (such as Firebase or AdMob)</li>
+</ul>
+
+<h2>4. Information We Do NOT Collect</h2>
+<p>Obsesive does not collect:</p>
+<ul>
+  <li>Precise location data</li>
+  <li>Web browsing history</li>
+  <li>Contacts</li>
+  <li>Messages between users</li>
+  <li>List of installed apps</li>
+  <li>Clinical or medical health data</li>
+</ul>
+<p>
+  Obsesive is <strong>not classified as a regulated medical application</strong>.
+</p>
+
+<h2>5. How We Use the Information</h2>
+<p>Collected data is used exclusively to:</p>
+<ul>
+  <li>Provide and maintain app functionality</li>
+  <li>Manage user accounts (when an account exists)</li>
+  <li>Synchronize data across devices for logged-in users</li>
+  <li>Analyze app usage and improve performance</li>
+  <li>Detect, diagnose, and fix bugs or crashes</li>
+  <li>Display advertisements within the app</li>
+</ul>
+
+<h2>6. Data Sharing with Third Parties</h2>
+<p>
+  Obsesive does <strong>not sell personal data</strong>.
+</p>
+<p>
+  Certain technical data may be shared with trusted third-party services strictly for app operation:
+</p>
+<ul>
+  <li><strong>Firebase (Google):</strong> authentication, database, analytics, crash reporting</li>
+  <li><strong>Google AdMob:</strong> displaying advertisements</li>
+</ul>
+<p>
+  These services may process device or user identifiers and aggregated or pseudonymized usage data. The user's email address is <strong>not used for ad targeting</strong>.
+</p>
+
+<h2>7. Advertising</h2>
+<p>
+  Obsesive displays ads through Google AdMob:
+</p>
+<ul>
+  <li>Ads do not block core features</li>
+  <li>No payment is required to access functionality</li>
+  <li>Email addresses are not used for direct ad personalization</li>
+</ul>
+
+<h2>8. Data Security</h2>
+<ul>
+  <li>All data is transmitted over secure connections (HTTPS / TLS)</li>
+  <li>Industry-standard Google services are used</li>
+  <li>Access to data is limited to what is strictly necessary</li>
+</ul>
+
+<h2>9. Account and Data Deletion</h2>
+<p>
+  Users who create an account can delete their account and associated personal data <strong>directly from within the app</strong>.
+</p>
+<p>The account deletion process:</p>
+<ul>
+  <li>Deletes the user account</li>
+  <li>Removes associated personal data</li>
+  <li>May require re-authentication for security reasons</li>
+</ul>
+<p>
+  Public account deletion guide:<br />
+  <a href="https://alancontreh.github.io/obsesive-delete-account/" target="_blank">https://alancontreh.github.io/obsesive-delete-account/</a>
+</p>
+<p>
+  Workout routines shared via codes are not deleted, as they become independent content once shared.
+</p>
+
+<h2>10. User Rights</h2>
+<ul>
+  <li>Use the app without providing personal information</li>
+  <li>Access, modify, or delete their account</li>
+  <li>Stop using the app at any time</li>
+</ul>
+
+<h2>11. Changes to This Policy</h2>
+<p>
+  This Privacy Policy may be updated periodically. Any changes will be reflected on this page.
+</p>
+
+<h2>12. Contact</h2>
+<p>
+  If you have questions about this Privacy Policy or data handling practices, you may contact us at:<br />
+  <strong>Email:</strong> <a href="mailto:obsesiveapp@gmail.com">obsesiveapp@gmail.com</a>
+</p>
+
+<footer>
+  <p>© 2025 Obsesive Labs. All rights reserved.</p>
+</footer>
+```
+
+  </div>
 </body>
 </html>
