--- a/index.html
+++ b/index.html
@@ -1,210 +1,195 @@
 <!DOCTYPE html>
-
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Privacy Policy – Obsesive</title>
+  <meta charset="UTF-8">
+  <title>Privacy Policy – Obsesive App</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <style>
     body {
-      font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif;
-      line-height: 1.6;
-      color: #1f2937;
-      background-color: #ffffff;
+      font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Arial, sans-serif;
+      background-color: #f4f6f8;
+      color: #333;
       margin: 0;
       padding: 0;
     }
+
     .container {
-      max-width: 900px;
-      margin: 0 auto;
-      padding: 32px 20px 64px;
+      max-width: 800px;
+      margin: 40px auto;
+      padding: 20px;
     }
+
+    .card {
+      background: #ffffff;
+      padding: 32px;
+      border-radius: 10px;
+      box-shadow: 0 8px 24px rgba(0, 0, 0, 0.06);
+    }
+
     h1 {
-      font-size: 2.2rem;
-      margin-bottom: 0.5rem;
+      margin-top: 0;
+      font-size: 28px;
+      color: #111;
     }
+
     h2 {
-      font-size: 1.4rem;
-      margin-top: 2.5rem;
-      border-bottom: 1px solid #e5e7eb;
-      padding-bottom: 6px;
+      margin-top: 32px;
+      font-size: 20px;
+      color: #111;
     }
-    p, li {
-      font-size: 1rem;
+
+    p {
+      line-height: 1.6;
+      margin: 12px 0;
     }
+
     ul {
       padding-left: 20px;
     }
-    .meta {
-      color: #6b7280;
-      margin-bottom: 2rem;
+
+    li {
+      margin-bottom: 10px;
     }
-    footer {
-      margin-top: 4rem;
-      font-size: 0.9rem;
-      color: #6b7280;
+
+    .note {
+      background-color: #f9fafb;
+      border-left: 4px solid #0066cc;
+      padding: 16px;
+      margin: 20px 0;
+      border-radius: 4px;
+    }
+
+    .footer {
+      margin-top: 40px;
+      font-size: 14px;
+      color: #666;
     }
   </style>
 </head>
 <body>
+
   <div class="container">
-    <h1>Privacy Policy – Obsesive</h1>
-    <p class="meta">Last updated: December 2025</p>
+    <div class="card">
+      <h1>Privacy Policy – Obsesive App</h1>
 
-```
-<h2>1. General Information</h2>
-<p>
-  <strong>App name:</strong> Obsesive<br />
-  <strong>Developer:</strong> Obsesive Labs<br />
-  <strong>Platform:</strong> Android (Google Play)
-</p>
-<p>
-  Obsesive is a gym and workout planning application based on scientific evidence. The app can be used <strong>with or without creating an account</strong>. Creating an account is completely optional.
-</p>
+      <p><strong>Last updated:</strong> December 18, 2025</p>
 
-<h2>2. Using the App Without an Account</h2>
-<p>
-  Users can access <strong>all core features of the app without signing in</strong>, including:
-</p>
-<ul>
-  <li>Creating and saving workout routines</li>
-  <li>Recording workout history</li>
-  <li>Analyzing training volume and routines</li>
-  <li>Viewing statistics per muscle group</li>
-  <li>Using the workout timer</li>
-  <li>Browsing exercises and scientific articles</li>
-</ul>
-<p>
-  When the app is used without an account, all data is stored <strong>locally on the device only</strong>. If the user changes or loses their device, this information will be permanently lost and cannot be recovered.
-</p>
+      <p>
+        Obsesive is a fitness and workout planning application based on scientific evidence.
+        This Privacy Policy explains how information is collected, used, and protected when
+        using the Obsesive app available on Google Play.
+      </p>
 
-<h2>3. Information We Collect</h2>
+      <h2>1. General Information</h2>
+      <p>
+        <strong>App name:</strong> Obsesive<br>
+        <strong>Developer:</strong> Obsesive Labs<br>
+        <strong>Contact email:</strong> obsesiveapp@gmail.com
+      </p>
 
-<h3>3.1 Information that may be collected</h3>
+      <h2>2. Use of the App Without an Account</h2>
+      <p>
+        Obsesive can be used <strong>without creating an account</strong>. Users can access
+        all core features of the app, including creating routines, tracking workout history,
+        analyzing training statistics, and browsing exercises.
+      </p>
+      <p>
+        When used without an account, all data is stored <strong>locally on the device</strong>.
+        If the device is lost or changed, this data cannot be recovered.
+      </p>
 
-<p><strong>a) Personal information (optional)</strong></p>
-<ul>
-  <li>Email address (only if the user creates an account)</li>
-</ul>
+      <h2>3. Information We Collect</h2>
 
-<p><strong>b) User-generated content</strong></p>
-<ul>
-  <li>Workout routines</li>
-  <li>Workout and exercise history</li>
-  <li>Training statistics and analysis per muscle group</li>
-  <li>App-related configurations</li>
-</ul>
+      <p><strong>Personal information (optional)</strong></p>
+      <ul>
+        <li>Email address (only if the user creates an account)</li>
+      </ul>
 
-<p><strong>c) App usage and performance data</strong></p>
-<ul>
-  <li>App interactions</li>
-  <li>Crash logs</li>
-  <li>Diagnostics and performance data</li>
-</ul>
+      <p><strong>User-generated content</strong></p>
+      <ul>
+        <li>Workout routines</li>
+        <li>Workout and exercise history</li>
+        <li>Training statistics and muscle group analysis</li>
+      </ul>
 
-<p><strong>d) Technical identifiers</strong></p>
-<ul>
-  <li>Device identifiers or other technical identifiers provided by third-party services (such as Firebase or AdMob)</li>
-</ul>
+      <p><strong>App usage and performance data</strong></p>
+      <ul>
+        <li>App interactions</li>
+        <li>Crash logs and diagnostics</li>
+        <li>Other app performance data</li>
+      </ul>
 
-<h2>4. Information We Do NOT Collect</h2>
-<p>Obsesive does not collect:</p>
-<ul>
-  <li>Precise location data</li>
-  <li>Web browsing history</li>
-  <li>Contacts</li>
-  <li>Messages between users</li>
-  <li>List of installed apps</li>
-  <li>Clinical or medical health data</li>
-</ul>
-<p>
-  Obsesive is <strong>not classified as a regulated medical application</strong>.
-</p>
+      <p><strong>Technical identifiers</strong></p>
+      <ul>
+        <li>Device or other identifiers used for app functionality, analytics, and advertising</li>
+      </ul>
 
-<h2>5. How We Use the Information</h2>
-<p>Collected data is used exclusively to:</p>
-<ul>
-  <li>Provide and maintain app functionality</li>
-  <li>Manage user accounts (when an account exists)</li>
-  <li>Synchronize data across devices for logged-in users</li>
-  <li>Analyze app usage and improve performance</li>
-  <li>Detect, diagnose, and fix bugs or crashes</li>
-  <li>Display advertisements within the app</li>
-</ul>
+      <h2>4. Information We Do Not Collect</h2>
+      <ul>
+        <li>Precise location data</li>
+        <li>Web browsing history</li>
+        <li>Contacts or messages between users</li>
+        <li>List of installed applications</li>
+        <li>Clinical or medical health data</li>
+      </ul>
 
-<h2>6. Data Sharing with Third Parties</h2>
-<p>
-  Obsesive does <strong>not sell personal data</strong>.
-</p>
-<p>
-  Certain technical data may be shared with trusted third-party services strictly for app operation:
-</p>
-<ul>
-  <li><strong>Firebase (Google):</strong> authentication, database, analytics, crash reporting</li>
-  <li><strong>Google AdMob:</strong> displaying advertisements</li>
-</ul>
-<p>
-  These services may process device or user identifiers and aggregated or pseudonymized usage data. The user's email address is <strong>not used for ad targeting</strong>.
-</p>
+      <p>
+        Obsesive is not classified as a regulated medical application.
+      </p>
 
-<h2>7. Advertising</h2>
-<p>
-  Obsesive displays ads through Google AdMob:
-</p>
-<ul>
-  <li>Ads do not block core features</li>
-  <li>No payment is required to access functionality</li>
-  <li>Email addresses are not used for direct ad personalization</li>
-</ul>
+      <h2>5. How We Use Information</h2>
+      <ul>
+        <li>Provide and maintain app functionality</li>
+        <li>Analyze workouts and training statistics</li>
+        <li>Manage user accounts (when applicable)</li>
+        <li>Improve app performance and stability</li>
+        <li>Display advertisements</li>
+      </ul>
 
-<h2>8. Data Security</h2>
-<ul>
-  <li>All data is transmitted over secure connections (HTTPS / TLS)</li>
-  <li>Industry-standard Google services are used</li>
-  <li>Access to data is limited to what is strictly necessary</li>
-</ul>
+      <h2>6. Data Sharing</h2>
+      <p>
+        Obsesive does not sell personal data. Limited technical data may be shared with trusted
+        third-party services strictly for app operation.
+      </p>
+      <ul>
+        <li><strong>Firebase (Google):</strong> authentication, analytics, crash reporting</li>
+        <li><strong>Google AdMob:</strong> advertising services</li>
+      </ul>
 
-<h2>9. Account and Data Deletion</h2>
-<p>
-  Users who create an account can delete their account and associated personal data <strong>directly from within the app</strong>.
-</p>
-<p>The account deletion process:</p>
-<ul>
-  <li>Deletes the user account</li>
-  <li>Removes associated personal data</li>
-  <li>May require re-authentication for security reasons</li>
-</ul>
-<p>
-  Public account deletion guide:<br />
-  <a href="https://alancontreh.github.io/obsesive-delete-account/" target="_blank">https://alancontreh.github.io/obsesive-delete-account/</a>
-</p>
-<p>
-  Workout routines shared via codes are not deleted, as they become independent content once shared.
-</p>
+      <h2>7. Advertising</h2>
+      <p>
+        Ads are provided through Google AdMob. Ads do not block core features, and no payment
+        is required to use the app. Email addresses are not used for ad personalization.
+      </p>
 
-<h2>10. User Rights</h2>
-<ul>
-  <li>Use the app without providing personal information</li>
-  <li>Access, modify, or delete their account</li>
-  <li>Stop using the app at any time</li>
-</ul>
+      <h2>8. Data Security</h2>
+      <ul>
+        <li>Data is transmitted using secure connections (HTTPS / TLS)</li>
+        <li>Industry-standard Google services are used</li>
+      </ul>
 
-<h2>11. Changes to This Policy</h2>
-<p>
-  This Privacy Policy may be updated periodically. Any changes will be reflected on this page.
-</p>
+      <h2>9. Account and Data Deletion</h2>
+      <p>
+        Users who create an account can delete their account and associated data directly from
+        within the app.
+      </p>
+      <p>
+        Public account deletion guide:<br>
+        <a href="https://alancontreh.github.io/obsesive-delete-account/" target="_blank">
+          https://alancontreh.github.io/obsesive-delete-account/
+        </a>
+      </p>
 
-<h2>12. Contact</h2>
-<p>
-  If you have questions about this Privacy Policy or data handling practices, you may contact us at:<br />
-  <strong>Email:</strong> <a href="mailto:obsesiveapp@gmail.com">obsesiveapp@gmail.com</a>
-</p>
+      <h2>10. Changes to This Policy</h2>
+      <p>
+        This Privacy Policy may be updated periodically. Changes will be reflected on this page.
+      </p>
 
-<footer>
-  <p>© 2025 Obsesive Labs. All rights reserved.</p>
-</footer>
-```
-
+      <div class="footer">
+        This Privacy Policy applies to the Obsesive app available on Google Play.
+      </div>
+    </div>
   </div>
+
 </body>
 </html>
